k8s/staging/openebs-ci-client.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: stag-openebs-ci-client
  namespace: staging-openebs-ci
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app : stag-openebs-ci-client
    spec:
      containers:
        - name: stag-openebs-ci-client-container
          image: mayadata/staging-dashboard-ci:fb7c97ea
          imagePullPolicy: Always
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stag-openebs-ci-client
  name: stag-openebs-ci-client-service
  namespace: staging-openebs-ci
spec:
  type: NodePort
  ports:
  - name: stag-openebs-ci-client
    port: 80
    protocol: TCP
  selector:
    app: stag-openebs-ci-client
