k8s/staging/ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: "/"
  name: dashboard-ingress
  namespace: staging-openebs-ci
spec:
  rules:
  - host: staging.openebs.ci
    http:
      paths:
      - backend:
          serviceName: stag-openebs-ci-client-service
          servicePort: 80
        path: "/"
      - backend:
          serviceName: echoheaders
          servicePort: 80
        path: "/echo/"
      - backend:
          serviceName: stage-openebs-ci-backend-service
          servicePort: 3000
        path: "/api/"
      - backend:
          serviceName: mayastor-ci-server-deployment
          servicePort: 8080
        path: "/mayastor/"
  tls:
  - hosts:
    - staging.openebs.ci
    secretName: staging-dashboard-ingress
